--- a/Styles/login.css
+++ b/Styles/login.css
@@ -5,7 +5,13 @@
   text-transform: capitalize;
 }
 body {
-  background: url("../Images/Backgrounds/bg4.jpeg") center;
+  background: linear-gradient(
+      to right,
+      rgba(105, 57, 1, 0.596),
+      rgba(8, 114, 117, 0.616),
+      rgba(68, 0, 23, 0.774)
+    ),
+    url("../Images/Backgrounds/bg4.jpeg") center;
   background-size: cover;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -22,10 +28,10 @@ body {
   width: 100%;
   max-width: 380px;
   padding: 90px 45px 45px;
-  background: rgba(8, 145, 49, 0.253);
+  background: rgba(29, 29, 29, 0.37);
   border-radius: 10px;
   color: whitesmoke;
-  box-shadow: 10px 10px 10px rgba(1, 71, 62, 0.808);
+  box-shadow: 10px 10px 10px rgba(182, 182, 182, 0.623);
 }
 .form::before {
   content: "";
@@ -34,7 +40,7 @@ body {
   left: 0;
   width: 50%;
   height: 100%;
-  background: rgba(1, 82, 82, 0.219);
+  background: rgba(6, 20, 20, 0.39);
   border-radius: 10px;
   pointer-events: none;
 }
@@ -49,7 +55,7 @@ body {
   text-align: center;
   letter-spacing: 1px;
   margin-bottom: 2rem;
-  color: rgba(88, 34, 2, 0.842);
+  color: rgba(252, 223, 207, 0.904);
 }
 .form .input-group {
   position: relative;
@@ -101,7 +107,7 @@ body {
   font-size: 1rem;
 }
 .forgot-pwd {
-  color: rgb(1, 50, 73);
+  color: inherit;
 }
 #forgot-pwd {
   position: absolute;
