--- a/Styles/login.css
+++ b/Styles/login.css
@@ -5,13 +5,7 @@
   text-transform: capitalize;
 }
 body {
-  background: linear-gradient(
-      to right,
-      rgba(105, 57, 1, 0.596),
-      rgba(210, 250, 252, 0.616),
-      rgba(68, 0, 23, 0.774)
-    ),
-    url("../Images/Backgrounds/bg4.jpeg") center;
+  background: url("../Images/Backgrounds/bg4.jpeg") center;
   background-size: cover;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -23,15 +17,16 @@ body {
   justify-content: center;
   align-items: center;
 }
+
 .form {
   position: relative;
   width: 100%;
   max-width: 380px;
   padding: 90px 45px 45px;
-  background: rgba(29, 29, 29, 0.37);
+  background: rgba(17, 1, 1, 0.596);
   border-radius: 10px;
   color: whitesmoke;
-  box-shadow: 10px 10px 10px rgba(182, 182, 182, 0.623);
+  box-shadow: 10px 10px 10px rgba(27, 41, 0, 0.747);
 }
 .form::before {
   content: "";
@@ -46,17 +41,17 @@ body {
   pointer-events: none;
 }
 .form::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 50%;
-    height: 100%;
-    transform: skew(30deg);
-    background: rgba(1, 129, 129, 0.39);
-    border-radius: 10px;
-    pointer-events: none;
-  }
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50%;
+  height: 100%;
+  transform: skew(30deg);
+  background: rgba(1, 129, 129, 0.39);
+  border-radius: 10px;
+  pointer-events: none;
+}
 .form img {
   position: absolute;
   top: -50px;
